--- a/css/desktop/header.css
+++ b/css/desktop/header.css
@@ -1,4 +1,5 @@
 .header-container {
+    width: 100vw;
     max-width: 1406px;
     height: 149px;
     margin: auto;
@@ -7,7 +8,8 @@
     grid-template-rows: 149px;
     box-sizing: border-box;
     justify-content: center;
-    
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.85);
 }
 .header-container__nav{
     display: contents;
