--- a/css/reset.css
+++ b/css/reset.css
@@ -14,6 +14,11 @@ body {
   line-height: 29px;
 }
 
+main {
+  padding-top: 149px;
+  border-top: 1px solid #32323D;
+}
+
 img {
   max-width: 100%;
   height: auto;
