--- a/css/reset.css
+++ b/css/reset.css
@@ -14,6 +14,13 @@ body {
   line-height: 29px;
 }
 
+header {
+  position: fixed;
+  background-color: #000;
+  left: 0;
+  right: 0;
+}
+
 main {
   padding-top: 149px;
 }
