--- a/css/desktop/section0.css
+++ b/css/desktop/section0.css
@@ -22,6 +22,7 @@
     padding-top: 60px;
     margin-bottom:0;
     text-align: justify;
+    font-weight: lighter;
 }
 .Hero__container--p{
     display:flex;
