--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,5 @@
 @import url(reset.css);
 @import url(utils.css);
-@import url(desktop/header.css);
 @import url(desktop/section_one.css);
+@import url(desktop/section3.css);
+@import url(desktop/header.css);
