--- a/css/global.css
+++ b/css/global.css
@@ -2,4 +2,7 @@
 @import url(utils.css);
 @import url(desktop/section_one.css);
 @import url(desktop/section3.css);
+@import url(desktop/section0.css);
+@import url(desktop/section4.css);
+@import url(desktop/section2.css);
 @import url(desktop/header.css);
